HelloUltraviolet/Fixtures/RejectedSource/Procedures/MainDiagnosticReferences/Source/Main.uv
//! Rejected executable specimen for main diagnostic references.

public procedure mainDiagnosticReferencesHelper() -> i32 {
    return 0
}
